2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-completing-read-list): removed extraneous (let
	((collection collection)) ...)

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-my-name-face and tnt-other-name-face): now only
	create these faces if they don't already exist.  point being that
	if they do exist, the user may have set different colors than the
	defaults, so we don't want to change those.  this is really only
	an issue for us developers, since end-users are unlikely to be
	reloading tnt.el after they've changed the colors.  but i reload
	tnt.el all the time, and (before) i was always having to reset my
	colors.

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-append-message): insert time stamp whether or not
	this is a message from a user.

2000-04-12  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-blist-to-buffer): Simplify filter interface so
 	filters need not add spaces.
 	(tnt-build-buddy-buffer): Remove extra spaces in filter.
	(tnt-blist-to-buffer): Use concat instead of format so string
	properties inserted by filter are copied.
	(tnt-build-buddy-buffer): Make buddies mouse highlighted to
	reflect the fact that they are clickable.
	(tnt-buddy-list-mode-map): Make it so that mouse-2 doesn't also
	try to yank when in buddy-list-mode.

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-test-for-buggy-idle): added.  tests emacs for proper
	idle timer handling.

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-buddy-edit-buffer): fixed typo.  with-current-buffer
	was typed as with-curren-buffer.

2000-04-12  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el: use with-current-buffer instead of a save-excursion plus 
	a set-buffer when possible.
	(tnt-set-buddy-status): if a buddy goes online/offline and you
	already have an im-buffer for that buddy, note it in the buffer.

2000-04-11  John Jannotti  <jj@lcs.mit.edu>
